fix: address critical review issues in PR #175
- Revert RustFS to MinIO (RustFS Docker image doesn't exist)
- Use environment variables for storage credentials instead of hardcoded values
- Pin KeyDB version to x86_64_v6.3.4 for reproducible builds
- Remove APISIX Admin API port exposure in production (security)
- Rename init-rustfs.sh to init-minio.sh with proper env var support

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -27,7 +27,7 @@ services:
       - test-network
 
   keydb-test:
-    image: eqalpha/keydb:latest
+    image: eqalpha/keydb:x86_64_v6.3.4
     container_name: keydb_test
     command: keydb-server --server-threads 2 --appendonly yes
     ports:
