fix: address all bot review comments for PR #175
- docs: fix certbot command for wildcard certs (DNS-01 required)
- docs: fix 'Self-auth removed' → 'Kanidm removed' in tracking docs
- env: fix .env.example RustFS → MinIO configuration
- env: fix .env.production RustFS → MinIO with variable refs
- frontend: add Node.js Buffer fallback in jwt.ts for SSR
- frontend: add server-side auth check in tenant settings
- frontend: fix roles security in profile API endpoints
- docs: update nginx/README.md to clarify APISIX is pending
- docs: fix SQL identifiers in PHASE_4_COMPLETION.md (self-auth → self_auth)

--- a/.env.example
+++ b/.env.example
@@ -33,24 +33,24 @@ ENABLE_METRICS=false
 
 # KeyDB Configuration (Redis-compatible cache and sessions)
 # KeyDB is a high-performance, multi-threaded Redis alternative
-REDIS_URL=redis://localhost:6379
 KEYDB_URL=redis://localhost:6379
+# Legacy alias - keep in sync with KEYDB_URL
+REDIS_URL=redis://localhost:6379
 
 # NATS Configuration (for event streaming)
 NATS_URL=nats://localhost:4222
 
-# RustFS Configuration (S3-compatible object storage)
-# RustFS is a high-performance, Rust-native MinIO alternative
-RUSTFS_ENDPOINT=http://localhost:9000
-RUSTFS_ACCESS_KEY=rustfsadmin
-RUSTFS_SECRET_KEY=rustfsadmin
-RUSTFS_BUCKET_NAME=anthill-files
-RUSTFS_REGION=us-east-1
+# MinIO Configuration (S3-compatible object storage)
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
+MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
+MINIO_BUCKET_NAME=anthill-files
+MINIO_REGION=us-east-1
 
-# Legacy S3/MinIO compatibility aliases (for existing code)
+# S3 compatibility aliases (for existing code using S3 SDK)
 S3_ENDPOINT=http://localhost:9000
-S3_ACCESS_KEY=rustfsadmin
-S3_SECRET_KEY=rustfsadmin
+S3_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
+S3_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
 S3_BUCKET_NAME=anthill-files
 
 # SSL/TLS Configuration (for Nginx, not application services)
