refactor: migrate from Nginx to Apache APISIX (#175)
* refactor: modernize tech stack (NGINX→APISIX, Kanidm cleanup, MinIO→RustFS, Redis→KeyDB)

Tech Stack Updates:
- Replace NGINX Gateway with Apache APISIX for dynamic configuration and plugin support
- Remove all Kanidm OAuth2/OIDC integration code (using self-hosted JWT auth instead)
- Migrate from MinIO to RustFS for S3-compatible object storage
- Migrate from Redis to KeyDB for multi-threaded caching
- Migrate from CapRover to Docker Compose deployment

Documentation Updates:
- Update ARCHITECTURE.md with new gateway architecture
- Update docs/production-deployment.md for Docker Compose + APISIX
- Update docs/troubleshooting.md with APISIX debugging
- Update docs/monitoring-setup.md with APISIX log scraping
- Mark infra/nginx/ as deprecated
- Update PROJECT_TRACKING tasks for new tech stack

Frontend Cleanup:
- Remove Kanidm OAuth endpoints and callbacks
- Simplify auth flow to use self-hosted JWT
- Remove groups-based authorization (use role instead)

Backend Cleanup:
- Fix invitation_service.rs field names for SQLx compatibility
- Clean up Kanidm-related code references

* fix: address critical review issues in PR #175

- Revert RustFS to MinIO (RustFS Docker image doesn't exist)
- Use environment variables for storage credentials instead of hardcoded values
- Pin KeyDB version to x86_64_v6.3.4 for reproducible builds
- Remove APISIX Admin API port exposure in production (security)
- Rename init-rustfs.sh to init-minio.sh with proper env var support

* fix: additional review issues

- Fix JWT base64url padding in decodeJwtPayload (prevents decode failures)
- Update ARCHITECTURE.md to reflect MinIO instead of RustFS
- Use env var substitution for storage credentials in docs

* fix: address all bot review comments for PR #175

- docs: fix certbot command for wildcard certs (DNS-01 required)
- docs: fix 'Self-auth removed' → 'Kanidm removed' in tracking docs
- env: fix .env.example RustFS → MinIO configuration
-

--- a/.env.example
+++ b/.env.example
@@ -31,23 +31,27 @@ RATE_LIMIT_WINDOW_SECONDS=60
 ENABLE_SWAGGER=true
 ENABLE_METRICS=false
 
-# Kanidm OAuth2 Configuration
-KANIDM_URL=https://your-kanidm-domain.com
-KANIDM_CLIENT_ID=anthill
-KANIDM_CLIENT_SECRET=your-oauth2-client-secret-change-this-in-production
-KANIDM_REDIRECT_URL=https://your-app-domain.com/api/v1/auth/oauth/callback
-
-# Redis Configuration (for caching and sessions)
+# KeyDB Configuration (Redis-compatible cache and sessions)
+# KeyDB is a high-performance, multi-threaded Redis alternative
+KEYDB_URL=redis://localhost:6379
+# Legacy alias - keep in sync with KEYDB_URL
 REDIS_URL=redis://localhost:6379
 
 # NATS Configuration (for event streaming)
 NATS_URL=nats://localhost:4222
 
-# MinIO Configuration (for file storage)
+# MinIO Configuration (S3-compatible object storage)
 MINIO_ENDPOINT=http://localhost:9000
-MINIO_ACCESS_KEY=minioadmin
-MINIO_SECRET_KEY=minioadmin
+MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
+MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
 MINIO_BUCKET_NAME=anthill-files
+MINIO_REGION=us-east-1
+
+# S3 compatibility aliases (for existing code using S3 SDK)
+S3_ENDPOINT=http://localhost:9000
+S3_ACCESS_KEY=${MINIO_ROOT_USER:-minioadmin}
+S3_SECRET_KEY=${MINIO_ROOT_PASSWORD:-minioadmin}
+S3_BUCKET_NAME=anthill-files
 
 # SSL/TLS Configuration (for Nginx, not application services)
 SSL_CERT_PATH=/path/to/ssl/cert.pem
