--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@
 # NEVER commit this file to version control - use .env.production.local instead
 
 # Database Configuration
-DATABASE_URL=postgres://inventory_user:CHANGE_THIS_PASSWORD@production-db-host:5432/inventory_saas
+DATABASE_URL=postgres://inventory_user:CHANGE_THIS_PASSWORD@postgres:5432/inventory_saas
 
 # JWT Configuration
 JWT_SECRET=CHANGE_THIS_TO_A_STRONG_RANDOM_SECRET_64_CHARS_MINIMUM
@@ -33,27 +33,30 @@ RATE_LIMIT_WINDOW_SECONDS=60
 ENABLE_SWAGGER=false
 ENABLE_METRICS=true
 
-# Kanidm OAuth2 Configuration
-KANIDM_URL=https://idm.your-domain.com
-KANIDM_CLIENT_ID=anthill
-KANIDM_CLIENT_SECRET=CHANGE_THIS_TO_YOUR_OAUTH2_CLIENT_SECRET
-KANIDM_REDIRECT_URL=https://your-app-domain.com/api/v1/auth/oauth/callback
-
-# Redis Configuration (for caching and sessions)
-REDIS_URL=redis://production-redis-host:6379
+# KeyDB Configuration (Redis-compatible, multi-threaded cache)
+REDIS_URL=redis://keydb:6379
+KEYDB_URL=redis://keydb:6379
+KEYDB_PASSWORD=CHANGE_THIS_KEYDB_PASSWORD
 
 # NATS Configuration (for event streaming)
-NATS_URL=nats://production-nats-host:4222
+NATS_URL=nats://nats:4222
 
-# MinIO Configuration (for file storage)
-MINIO_ENDPOINT=https://minio.your-domain.com
-MINIO_ACCESS_KEY=CHANGE_THIS_ACCESS_KEY
-MINIO_SECRET_KEY=CHANGE_THIS_SECRET_KEY
+# MinIO Configuration (S3-compatible object storage)
+MINIO_ENDPOINT=http://minio:9000
+MINIO_ROOT_USER=CHANGE_THIS_ACCESS_KEY
+MINIO_ROOT_PASSWORD=CHANGE_THIS_SECRET_KEY
 MINIO_BUCKET_NAME=anthill-production-files
+MINIO_REGION=us-east-1
 
-# SSL/TLS Configuration (for Nginx, not application services)
-SSL_CERT_PATH=/etc/ssl/certs/anthill.crt
-SSL_KEY_PATH=/etc/ssl/private/anthill.key
+# S3 compatibility aliases (uses MinIO credentials)
+S3_ENDPOINT=${MINIO_ENDPOINT}
+S3_ACCESS_KEY=${MINIO_ROOT_USER}
+S3_SECRET_KEY=${MINIO_ROOT_PASSWORD}
+S3_BUCKET_NAME=${MINIO_BUCKET_NAME}
+
+# SSL/TLS Configuration (for Nginx)
+SSL_CERT_PATH=/etc/letsencrypt/live/your-domain.com/fullchain.pem
+SSL_KEY_PATH=/etc/letsencrypt/live/your-domain.com/privkey.pem
 
 # Monitoring Configuration
 METRICS_PORT=9090
@@ -65,6 +68,8 @@ SMTP_PORT=587
 SMTP_USERNAME=noreply@your-domain.com
 SMTP_PASSWORD=CHANGE_THIS_APP_PASSWORD
 SMTP_FROM_EMAIL=noreply@your-domain.com
+SMTP_FROM_NAME=Anthill
+SMTP_TLS=true
 
 # Feature Flags
 ENABLE_OAUTH2=true
