--- a/infra/docker_compose/docker-compose.yml
+++ b/infra/docker_compose/docker-compose.yml
@@ -15,14 +15,15 @@ services:
       timeout: 5s
       retries: 5
 
-  redis:
-    image: redis:7-alpine
-    container_name: redis_cache
+  keydb:
+    image: eqalpha/keydb:x86_64_v6.3.4
+    container_name: keydb_cache
     network_mode: host
+    command: keydb-server --server-threads 2 --appendonly yes
     volumes:
-      - redis_data:/data
+      - keydb_data:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "keydb-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -42,17 +43,14 @@ services:
     image: minio/minio:latest
     container_name: minio_storage
     network_mode: host
-    # ⚠️ Development-only credentials - DO NOT use in production
-    # For production: use .env file or secure secret injection
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-      MINIO_REGION_NAME: us-east-1
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minioadmin}
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/ready"]
+      test: ["CMD", "mc", "ready", "local"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -65,13 +63,14 @@ services:
       minio:
         condition: service_healthy
     volumes:
-      - ./infra/init-minio.sh:/init-minio.sh:ro
-    command: sh /init-minio.sh
-    # ⚠️ Development-only credentials - must match minio service credentials
+      - ../init-minio.sh:/init-minio.sh:ro
+    entrypoint: ["sh", "/init-minio.sh"]
     environment:
-      - MC_HOST_local=http://minioadmin:minioadmin@localhost:9000
+      - MINIO_ENDPOINT=http://localhost:9000
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-minioadmin}
 
 volumes:
   postgres_data:
-  redis_data:
+  keydb_data:
   minio_data:
