fix: address all bot review comments for PR #177
- Fix RustFS env vars: RUSTFS_ACCESS_KEY/SECRET_KEY (not ROOT_USER/PASSWORD)
- Fix migration: UPDATE data before adding CHECK constraint
- Fix ARCHITECTURE.md: correct RustFS command and env vars
- Fix test_utils: update auth_method when clearing password
- Fix clippy: use split_once instead of manual splitn

--- a/.env.example
+++ b/.env.example
@@ -42,15 +42,16 @@ NATS_URL=nats://localhost:4222
 
 # RustFS Configuration (S3-compatible object storage)
 RUSTFS_ENDPOINT=http://localhost:9000
-RUSTFS_ROOT_USER=${RUSTFS_ROOT_USER:-rustfsadmin}
-RUSTFS_ROOT_PASSWORD=${RUSTFS_ROOT_PASSWORD:-rustfsadmin}
+RUSTFS_ACCESS_KEY=rustfsadmin
+RUSTFS_SECRET_KEY=rustfsadmin
 RUSTFS_BUCKET_NAME=anthill-files
 RUSTFS_REGION=us-east-1
 
 # S3 compatibility aliases (for existing code using S3 SDK)
+# Keep in sync with RUSTFS_ACCESS_KEY/RUSTFS_SECRET_KEY
 S3_ENDPOINT=http://localhost:9000
-S3_ACCESS_KEY=${RUSTFS_ROOT_USER:-rustfsadmin}
-S3_SECRET_KEY=${RUSTFS_ROOT_PASSWORD:-rustfsadmin}
+S3_ACCESS_KEY=rustfsadmin
+S3_SECRET_KEY=rustfsadmin
 S3_BUCKET_NAME=anthill-files
 
 # SSL/TLS Configuration (for Nginx, not application services)
