--- a/.env.production
+++ b/.env.production
@@ -43,15 +43,15 @@ NATS_URL=nats://nats:4222
 
 # RustFS Configuration (S3-compatible object storage)
 RUSTFS_ENDPOINT=http://rustfs:9000
-RUSTFS_ROOT_USER=CHANGE_THIS_ACCESS_KEY
-RUSTFS_ROOT_PASSWORD=CHANGE_THIS_SECRET_KEY
+RUSTFS_ACCESS_KEY=CHANGE_THIS_ACCESS_KEY
+RUSTFS_SECRET_KEY=CHANGE_THIS_SECRET_KEY
 RUSTFS_BUCKET_NAME=anthill-production-files
 RUSTFS_REGION=us-east-1
 
 # S3 compatibility aliases (uses RustFS credentials)
 S3_ENDPOINT=${RUSTFS_ENDPOINT}
-S3_ACCESS_KEY=${RUSTFS_ROOT_USER}
-S3_SECRET_KEY=${RUSTFS_ROOT_PASSWORD}
+S3_ACCESS_KEY=${RUSTFS_ACCESS_KEY}
+S3_SECRET_KEY=${RUSTFS_SECRET_KEY}
 S3_BUCKET_NAME=${RUSTFS_BUCKET_NAME}
 
 # SSL/TLS Configuration (for Nginx)
