--- a/.env.production
+++ b/.env.production
@@ -41,18 +41,18 @@ KEYDB_PASSWORD=CHANGE_THIS_KEYDB_PASSWORD
 # NATS Configuration (for event streaming)
 NATS_URL=nats://nats:4222
 
-# MinIO Configuration (S3-compatible object storage)
-MINIO_ENDPOINT=http://minio:9000
-MINIO_ROOT_USER=CHANGE_THIS_ACCESS_KEY
-MINIO_ROOT_PASSWORD=CHANGE_THIS_SECRET_KEY
-MINIO_BUCKET_NAME=anthill-production-files
-MINIO_REGION=us-east-1
+# RustFS Configuration (S3-compatible object storage)
+RUSTFS_ENDPOINT=http://rustfs:9000
+RUSTFS_ACCESS_KEY=CHANGE_THIS_ACCESS_KEY
+RUSTFS_SECRET_KEY=CHANGE_THIS_SECRET_KEY
+RUSTFS_BUCKET_NAME=anthill-production-files
+RUSTFS_REGION=us-east-1
 
-# S3 compatibility aliases (uses MinIO credentials)
-S3_ENDPOINT=${MINIO_ENDPOINT}
-S3_ACCESS_KEY=${MINIO_ROOT_USER}
-S3_SECRET_KEY=${MINIO_ROOT_PASSWORD}
-S3_BUCKET_NAME=${MINIO_BUCKET_NAME}
+# S3 compatibility aliases (uses RustFS credentials)
+S3_ENDPOINT=${RUSTFS_ENDPOINT}
+S3_ACCESS_KEY=${RUSTFS_ACCESS_KEY}
+S3_SECRET_KEY=${RUSTFS_SECRET_KEY}
+S3_BUCKET_NAME=${RUSTFS_BUCKET_NAME}
 
 # SSL/TLS Configuration (for Nginx)
 SSL_CERT_PATH=/etc/letsencrypt/live/your-domain.com/fullchain.pem
