chore: add e2e test artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ temp/
 
 # Runtime files
 inventory.pid
+
+# E2E Tests (Playwright)
+tests/e2e/node_modules/
+tests/e2e/playwright-report/
+tests/e2e/test-results/
+tests/e2e/results/
+tests/e2e/package-lock.json
